--- a/css/yeimmi.css
+++ b/css/yeimmi.css
@@ -124,3 +124,11 @@
     border-radius: 30px;
     margin-bottom:30px ;  
 }
+.fa-solid{
+   align-items: center;
+   color: #000000; 
+}
+.play{
+   display: inline-block;
+   position: relative; 
+}
