--- a/css/jennifer.css
+++ b/css/jennifer.css
@@ -1,9 +1,7 @@
-
 body{
     font-family:Arial, Helvetica, sans-serif;
     background-size:cover;
-    background: #121216;
-    
+    background-color: #121216;
 }
 
 header{
@@ -20,6 +18,7 @@ header{
 }
 .logo img{
     height: 24px;
+    margin-top:20px;
     text-decoration-color: rgba(255, 255, 255, 0.108);
 }
 
@@ -29,13 +28,14 @@ header{
     display: flex;
     height: 80px;
     width:200px;
-    margin: 1px;
+    margin: 20px;
     display: inline-block;
     padding:10px 10px;
     font-weight: 700px;
     text-decoration:none;
     background-color: transparent;
-    color:#FFFFFF;    
+    color:#FFFFFF; 
+    right: 90px;   
 
 } 
 
@@ -48,14 +48,13 @@ header{
     float: left;
     display:flex;
     border: 1px solid white;
-    padding:10px 10px;
-    font-weight: 700px;
+    padding:10px 20px;
     text-transform: uppercase;
     text-decoration:none;
     background-color: transparent;
     color:#FFFFFF;   
     border-radius: 30px;   
-
+    margin:30px;
 }  
 
 
@@ -64,7 +63,7 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 100px;
+    padding-top: 10px;
     font-size: 16px;
     text-align:center;
     
@@ -74,17 +73,12 @@ header{
     display:flex;
     flex-direction:column;
     align-items: center;
-   
-    width:660px;
+    width:420px;
 }
 
 .content{
-    padding: 1px;
-  
     display:flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content:space-between;
 }
 
 h1{
@@ -92,8 +86,10 @@ h1{
     text-align:center;
 }
 
+
 .morado{
-    margin-top:auto;
+    padding: 1px 80px 1px;
+    margin-top:20px;
     margin-bottom:20px;
     border-radius: 20px;
     font-size: 16px;
@@ -103,8 +99,8 @@ h1{
 
 .morado .bu3{
     font-weight: bold;
-    position: relativate;
-    display: inline-block;
+    position: relative;
+    display: flex;
     border: 0px solid;
     padding:20px 80px;
     color:#ffffff;
@@ -120,7 +116,7 @@ h1{
 }
 
 .morado a{
-    color:#FFFFFF;
+    color:#dfd7d7;
 }
 
 .morado h3{
@@ -128,7 +124,19 @@ h1{
     font-size: 30px; 
 }
 
+.mor{
+    background: #FC466B;  
+    background: -webkit-linear-gradient(to right,#FC466B,#FF0099, #3F5EFB,#1E9600 );  
+    background: linear-gradient(to right,#FC466B,#FF0099, #3F5EFB, #1E9600); 
+    width: 90%;
+    height: 90%;
+    filter:blur(70px);
+    z-index:-10;
+    text-align: center;
+}
+
 .naranja{
+    padding: 1px 80px 1px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
@@ -140,8 +148,8 @@ h1{
 
 .naranja .bu4{
     font-weight: bold;
-    position: relativate;
-    display: inline-block;
+    position: relative;
+    display: flex;
     border: 0px solid;
     padding:20px 80px;
     color:#ffffff;
@@ -167,6 +175,7 @@ h1{
 
 
 .negro{
+    padding: 1px 80px 1px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
@@ -181,17 +190,15 @@ h1{
 }
 
 .negro .bu5{
-    font-weight: bold;
-    position: relativate;
-    display: inline-block;
+    position: relative;
+    display: flex;
     border: 0px solid;
-    padding: 20px 50px;
+    padding:20px 80px;
     color:#ffffff;
     text-transform: uppercase;
     text-decoration:none;
     background: #101010;
     border-radius: 30px;
-    font-weight: 24px;
 }
 
 .negro .bu5:hover{
@@ -205,6 +212,7 @@ h1{
 }
 
 .azul_claro{
+    padding: 1px 80px 1px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
@@ -217,8 +225,8 @@ h1{
 
 .azul_claro .bu6{
     font-weight: bold;
-    position: relativate;
-    display: inline-block;
+    position: relative;
+    display: flex;
     border: 0px solid;
     padding:20px 80px;
     color:#ffffff;
@@ -226,7 +234,6 @@ h1{
     text-decoration:none;
     background: #101010;
     border-radius: 30px;
-    font-weight: 24px;
 }
 
 .azul_claro .bu6:hover{
@@ -248,13 +255,66 @@ h1{
     float: left;
     display:flex;
     border: 1px solid white;
-    padding:10px 10px;
-    font-weight: 700px;
+    padding:10px 230px;
+    font-weight:700px;
     text-transform: uppercase;
     text-decoration:none;
     background-color: transparent;
     color:#FFFFFF;   
-    border-radius: 30px;   
+    border-radius: 30px;  
+    font-weight: bold;
+}
+
+.Boton2 .bu8{
+    float: left;
+    display:flex;
+    border: 1px solid white;
+    padding:10px 190px;
+    font-weight:700px;
+    text-transform: uppercase;
+    text-decoration:none;
+    background-color: transparent;
+    color:#FFFFFF;   
+    border-radius: 30px;  
+    font-weight: bold;
+}
+
+.des1{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    text-align: center;
+    border-radius: 20px;
+    color:#FFFFFF;
+    background: linear-gradient(69.06deg,#b84fdd -26.76%,#4965f4 44.6%,#2efb74 132.54%);
+}
+
+.des1 .color1{
+    font-weight: bold;
+    position: relative;
+    display: inline-block;
+    border: 0px solid;
+    padding:20px 80px;
+    color:#ffffff;
+    text-transform: uppercase;
+    text-decoration:none;
+    background: #101010;
+    border-radius: 30px;
+    font-weight: 24px;
+    text-align:center;
+}
+
+.des1 .color1:hover{
+    color:#000000;
+    background-color:#FFFFFF ;
+    font-weight: 24px;
+}
+
+.des1 a{
+    color:#FFFFFF;
 }
 
 
+select .bu7{
+    text-align:center;
+}
