--- a/css/jennifer.css
+++ b/css/jennifer.css
@@ -1,5 +1,5 @@
 body{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Roboto','arial','sans serif';
     background-size:cover;
     background-color: #121216;
 }
@@ -65,7 +65,8 @@ header{
     align-items: center;
     padding-top: 10px;
     font-size: 16px;
-    text-align:center;  
+    text-align:center;
+    
 }
 
 .top{
@@ -73,8 +74,6 @@ header{
     flex-direction:column;
     align-items: center;
     width:420px;
-    line-height: 25px;
-    margin-top: 40px;
 }
 
 .content{
@@ -83,11 +82,16 @@ header{
 }
 
 h1{
+    font-weight: bold;
+    font-family: 'arial';
     color: #FFFFFF;
     text-align:center;
+    font-size: 42px;
 }
+
+
 .morado{
-    padding: 1px 80px 1px;
+    padding: 24px 80px 16px;
     margin-top:20px;
     margin-bottom:20px;
     border-radius: 20px;
@@ -107,7 +111,6 @@ h1{
     text-decoration:none;
     background: #101010;
     border-radius: 30px;
-    margin-top: 20px;
 }
 
 .morado .bu3:hover{
@@ -117,25 +120,22 @@ h1{
 
 .morado a{
     color:#dfd7d7;
-}
-
-.morado h3{
-    text-align: center;
-    font-size: 30px; 
+    font-size: 14px;
 }
 
 .mor{
-    background: #FC466B;  
-    background: -webkit-linear-gradient(to right,#FC466B,#FF0099, #3F5EFB,#1E9600 );  
-    background: linear-gradient(to right,#FC466B,#FF0099, #3F5EFB, #1E9600); 
-    width: 90%;
-    height: 90%;
-    filter:blur(70px);
-    z-index:-10;
+    background: #f12711,#FC466B,#FF0099,#8E2DE2,#0f32dd, #11998e,#1E9600,#52c234;  
+    background: -webkit-linear-gradient(to right,#f12711,#FC466B,#FF0099,#8E2DE2,#0f32dd, #11998e,#1E9600 );  
+    background: linear-gradient(to right,#f12711,#FC466B,#FF0099,#8E2DE2, #0f32dd,#11998e,#1E9600,#52c234); 
+    max-width: 100%;
+    height: 120%;
+    filter:blur(80px);
+    z-index:-5git 0;
     text-align: center;
 }
+
 .naranja{
-    padding: 1px 80px 1px;
+    padding: 24px 80px 16px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
@@ -156,7 +156,6 @@ h1{
     text-decoration:none;
     background: #101010;
     border-radius: 30px;
-    margin-top: 20px;
 }
 
 .naranja .bu4:hover{
@@ -165,17 +164,12 @@ h1{
 }
 
 .naranja a{
-    color:#FFFFFF;
+    color:#dfd7d7;
+    font-size: 14px;
 }
-
-.naranja  h3{
-    text-align: center;
-    font-size: 30px; 
-}
-
 
 .negro{
-    padding: 1px 80px 1px;
+    padding: 24px 80px 16px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
@@ -186,14 +180,16 @@ h1{
 }
 
 .negro img{
-    height: 20px;
+    height: 25px;
+    margin-top: 25px;
 }
 
 .negro .bu5{
+    font-weight: bold;
     position: relative;
     display: flex;
     border: 0px solid;
-    padding:20px 80px;
+    padding:20px 40px;
     color:#ffffff;
     text-transform: uppercase;
     text-decoration:none;
@@ -204,15 +200,10 @@ h1{
 .negro .bu5:hover{
     color:#000000;
     background-color:#FFFFFF ;
-    font-weight: 24px;
-}
-
-.negro a{
-    color:#FFFFFF;
 }
 
 .azul_claro{
-    padding: 1px 80px 1px;
+    padding: 24px 80px 16px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
@@ -221,6 +212,8 @@ h1{
     color:#FFFFFF;
     background: linear-gradient(69.06deg,#b84fdd -26.76%,#4965f4 44.6%,#2efb74 132.54%);
 }
+
+
 .azul_claro .bu6{
     font-weight: bold;
     position: relative;
@@ -241,12 +234,8 @@ h1{
 }
 
 .azul_claro a{
-    color:#FFFFFF;
-}
-
-.azul_claro h3{
-    text-align: center;
-    font-size: 30px; 
+    color:#dfd7d7;
+    font-size: 14px;
 }
 
 .Boton1 .bu7{
@@ -278,6 +267,7 @@ h1{
 }
 
 .des1{
+    padding: 24px 80px 16px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
@@ -309,8 +299,114 @@ h1{
 }
 
 .des1 a{
-    color:#FFFFFF;
+    color:#dfd7d7;
+    font-size: 14px;
 }
+
 select .bu7{
     text-align:center;
 }
+
+div .arreglo1 h1{
+    font-family: 'arial';
+    text-align: center;
+    font-size: 38px;
+    margin-top: 1px;
+    margin-bottom: 5px;
+    display:inline 38px;
+}
+
+div .arreglo2 p{
+    font-family: 'arial';
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 24px;
+    font-size: 16px;
+}
+
+div .arreglo3 p{
+    font-family: 'arial';
+    text-align: center;
+    margin-bottom: 5px;
+    margin-top: 16px;
+    font-size: 16px;
+}
+
+div .arreglo4 p{
+    font-family: 'arial';
+    text-align: center;
+    margin-top: 24px;
+    font-size: 16px;
+    margin-bottom: 24px;
+}
+
+div .arreglo5 h1{
+    font-family: 'arial';
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 31px;
+}
+
+div .arreglo6 h4{
+    font-family: 'arial';
+    text-align: center;
+    margin-top: 1px;
+    font-size: 16px;
+    margin-bottom: 10px;
+    font-weight: normal;
+}
+
+div .arreglo7 p{
+    font-family: 'arial';
+    text-align: center;
+    margin-top: 10px;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+div .arreglo8 h3{
+    font-family: 'arial';
+    font-size: 16px;
+    font-weight: normal;
+}
+
+div .arreglo9 h1{
+    font-family: 'arial';
+    font-size: 38px;
+}
+
+div .arreglo10 p{
+    font-family: 'arial';
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-size: 16px;
+}
+
+div .arreglo11 h1{
+    font-family: 'arial';
+    text-align: center;
+    margin-top: 16px;
+    margin-bottom: 5px;
+    font-size: 32px;
+}
+
+div .arreglo12 h4{
+    font-family: 'arial';
+    text-align: center;
+    margin-top: 1px;
+    font-size: 16px;
+    margin-bottom: 10px;
+    font-weight: normal;
+}
+
+div .arreglo13 p{
+    font-family: 'arial';
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+
